tests/NormalTests/paczka1/fuzzy1/85321558.err
Error in line 2: YA8XsNylZ A842 62,2
Error in line 9: 9zEn3Hbn3 A842 97,0
Error in line 34: 9zEn3Hbn3 S803 21,53
